2005-11-08  Esteban Sanchez <esteban@steve-o.org>
	
	* configure.in: Version 0.8.

	* NEWS: Added release info
	
	* data/comics.xml: Removed abandoned and problematics strips.

2005-11-08  Esteban Sanchez <esteban@steve-o.org>

	* src/buoh-comic.[ch]: Clean up old code. Added a new method
	buoh_comic_get_filename.
	
	* src/buoh-comic.c: Fixed a memory leak.

	* src/buoh-window.c: The suggested name on the save dialog is now the
	same than the original but with the PNG extension. Added a function
	to set the sensitiveness of the browsing actions (Prev, Next, First &
	Last)
	
	* data/comics.xml: Removed duplicated strip.

2005-10-02  Esteban Sanchez  <esteban@steve-o.org>

	* src/buoh-window.c: Updated a string.

	* po/POTFILES.in: Removed old files.

2005-10-01  Esteban Sanchez  <esteban@steve-o.org>

	* src/buoh-window.c: Fixed a typo in a string.

2005-09-30  Carlos Garcia Campos  <carlosgc@gnome.org>

	* data/buoh-ui.xml: Reorder popup menu items

	* data/buoh.desktop.in: Capitalization

	* data/buoh.schemas.in: Add show_statusbar key

	* src/buoh-add-comic-dialog.c: Capitalization. Remove frame align. Add
	a label to show the amount of selected items. Ellipsisation.

	* src/buoh-comic-list.[ch]: Remove frame.
	s/get_comic_manager/get_selected/

	* src/buoh-comic-manager-date.c: get_dayweek returns gchar* instead
	of const gchar* since it returns a new allocated string

	* src/buoh-properties-dialog.c: Set close button as default response

	* src/buoh-view-comic.c: CTRL+scrollwheel for zooming

	* src/buoh-window.c: Add statusbar. <alt>[Left|Right] for navigation
	actions. Set window title based on selected comic. <shift>+F10 for
	showing popups.

2005-09-30  Esteban Sanchez  <esteban@steve-o.org>

	* src/buoh-comic-manager-date.[ch]: Added get_publications_days method
	that returns a string with the days of week in which the comic is
	published. Changed restrictions to a positive logic.

	* src/buoh-comic-properties-dialog.c: Added property of publication