@@ -5,7 +5,7 @@ Version 0.8
 First public release.
 
 Comics
-	* Including 128 online comics strips.
+	* Including 128 online comics stripes.
 	* There are comics in english and in spanish.
 	* Browsing through an historical archive in each strip.
 
